--- a/Spotify Tiles/Strings/es-ES/Resources.resw
+++ b/Spotify Tiles/Strings/es-ES/Resources.resw
@@ -540,22 +540,79 @@
   <data name="Steam_AppMessage" xml:space="preserve">
     <value>Ademas de añadir Tiles para tus juegos de Steam, también puedes añadir una Tile para iniciar solamente Steam.</value>
   </data>
-  <data name="Albums" xml:space="preserve">
-    <value>Álbumes</value>
+  <data name="Spotify_AlbumsPlaylists" xml:space="preserve">
+    <value>Álbumes y Playlists</value>
   </data>
   <data name="Spotify_SearchAlbum.Text" xml:space="preserve">
     <value>Buscar Álbum</value>
   </data>
-  <data name="Spotify_SearchMessage.Text" xml:space="preserve">
+  <data name="Spotify_SearchAlbumMessage.Text" xml:space="preserve">
     <value>Introduce el nombre del álbum o del artista, y clickea buscar:</value>
   </data>
   <data name="Spotify_StoreDescription" xml:space="preserve">
-    <value>Añade Tiles de tus álbumes de Spotify en el Menú Inicio de Windows 10.</value>
+    <value>Añade Tiles de tus álbumes y playlists de Spotify en el Menú Inicio de Windows 10.</value>
   </data>
   <data name="Spotify_StoreTags" xml:space="preserve">
     <value>Spotify,Música</value>
   </data>
   <data name="Spotify_Title" xml:space="preserve">
-    <value>Tiles para los álbumes de Spotify</value>
+    <value>Tiles para los álbumes y playlists de Spotify</value>
+  </data>
+  <data name="Webs" xml:space="preserve">
+    <value>Páginas Web</value>
+  </data>
+  <data name="Webs_Generate.Text" xml:space="preserve">
+    <value>Generar</value>
+  </data>
+  <data name="Webs_Message.Text" xml:space="preserve">
+    <value>Introduce el enlace de la página web y clickea generar:</value>
+  </data>
+  <data name="Webs_Title" xml:space="preserve">
+    <value>Tiles para Webs</value>
+  </data>
+  <data name="Webs_StoreDescription" xml:space="preserve">
+    <value>Añade Tiles de las páginas web en el Menú Inicio de Windows 10.</value>
+  </data>
+  <data name="Webs_StoreTags" xml:space="preserve">
+    <value>Edge,Firefox,Opera,Chrome</value>
+  </data>
+  <data name="Netflix_SearchMessage.Text" xml:space="preserve">
+    <value>Introduce el título de la película o serie:</value>
+  </data>
+  <data name="Netflix_SearchVideo.Text" xml:space="preserve">
+    <value>Buscar</value>
+  </data>
+  <data name="Netflix_StoreDescription" xml:space="preserve">
+    <value>Añade Tiles de las películas y series de Netflix en el Menú Inicio de Windows 10.</value>
+  </data>
+  <data name="Netflix_StoreMessage1" xml:space="preserve">
+    <value>Es compatible con la app de Netflix para Windows 10 y con cualquier navegador web que soporte Netflix.</value>
+  </data>
+  <data name="Netflix_StoreTags" xml:space="preserve">
+    <value>Netflix,Películas,Series</value>
+  </data>
+  <data name="Netflix_Title" xml:space="preserve">
+    <value>Tiles para las películas y series de Netflix</value>
+  </data>
+  <data name="Videos" xml:space="preserve">
+    <value>Videos</value>
+  </data>
+  <data name="Back.Text" xml:space="preserve">
+    <value>Volver</value>
+  </data>
+  <data name="Spotify_Albums.Text" xml:space="preserve">
+    <value>Álbumes</value>
+  </data>
+  <data name="Spotify_Playlists.Text" xml:space="preserve">
+    <value>Playlists</value>
+  </data>
+  <data name="Spotify_SearchPlaylists.Text" xml:space="preserve">
+    <value>Buscar Playlists</value>
+  </data>
+  <data name="Spotify_SearchPlaylistsMessage.Text" xml:space="preserve">
+    <value>Introduce tu id de usuario:</value>
+  </data>
+  <data name="Spotify_UserID.Text" xml:space="preserve">
+    <value>Cómo averiguar tu id de usuario</value>
   </data>
 </root>
