--- a/Spotify Tiles/Strings/es-ES/Resources.resw
+++ b/Spotify Tiles/Strings/es-ES/Resources.resw
@@ -553,7 +553,7 @@
     <value>Añade Tiles de tus álbumes y playlists de Spotify en el Menú Inicio de Windows 10.</value>
   </data>
   <data name="Spotify_StoreTags" xml:space="preserve">
-    <value>Spotify,Música</value>
+    <value>Spotify,Música,Playlists</value>
   </data>
   <data name="Spotify_Title" xml:space="preserve">
     <value>Tiles para los álbumes y playlists de Spotify</value>
