--- a/Spotify Tiles/Strings/en-US/Resources.resw
+++ b/Spotify Tiles/Strings/en-US/Resources.resw
@@ -553,7 +553,7 @@
     <value>Pin Tiles of your Spotify albums and playlists to the Windows 10 Start Menu.</value>
   </data>
   <data name="Spotify_StoreTags" xml:space="preserve">
-    <value>Spotify,Music</value>
+    <value>Spotify,Music,Playlists</value>
   </data>
   <data name="Spotify_Title" xml:space="preserve">
     <value>Tiles for Spotify Albums and Playlists</value>
